Update of Flame configs

--- a/roles/scrutiny/tasks/main.yml
+++ b/roles/scrutiny/tasks/main.yml
@@ -33,6 +33,11 @@
         restart_policy: unless-stopped
         privileged: true
         memory: "{{ scrutiny_memory }}"
+        labels:
+          flame.type: "application"
+          flame.name: "Scrutiny"
+          flame.url: "https://jezyk:{scrutiny_port}"
+          flame.icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons@master/png/scrutiny.png"
   when: scrutiny_enabled is true
 
 - name: Stop Scrutiny
