--- a/roles/homeassistant/tasks/main.yml
+++ b/roles/homeassistant/tasks/main.yml
@@ -6,7 +6,8 @@
         path: "{{ item }}"
         state: directory
       with_items:
-        - "{{ homeassistant_data_directory }}/config"
+        - "{{ homeassistant_directory }}"
+        - "{{ homeassistant_directory }}/config"
 
     - name: Home Assistant Docker Container
       community.docker.docker_container:
@@ -14,8 +15,10 @@
         image: "{{ homeassistant_image_name }}:{{ homeassistant_image_version }}"
         pull: true
         volumes:
-          - "{{ homeassistant_data_directory }}/config:/config:rw"
+          - "{{ homeassistant_directory }}:/config:rw"
         network_mode: host
+        ports:
+         - "8123:8123"
         restart_policy: unless-stopped
         env:
           TZ: "{{ ansible_nas_timezone }}"
@@ -27,7 +30,77 @@
           traefik.http.routers.homeassistant.tls.domains[0].sans: "*.{{ ansible_nas_domain }}"
           traefik.http.services.homeassistant.loadbalancer.server.port: "8123"
         memory: "{{ homeassistant_memory }}"
+
+    - name: Create Home Assistant network
+      community.docker.docker_network:
+        name: "{{ homeassistant_network_name }}"
+
+    - name: Create Z2MQTT and Mosquitto directories
+      ansible.builtin.file:
+        path: "{{ item }}"
+        state: directory
+      with_items:
+        - "{{ mosquitto_directory }}/data"
+        - "{{ mosquitto_directory }}/config"
+        - "{{ mosquitto_directory }}/log"
+        - "{{ zigbee2mqtt_data_directory }}"
+
+    - name: Prepare config
+      ansible.builtin.template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        mode: '0640'
+      loop:
+        - src: configuration.yaml
+          dest: "{{ zigbee2mqtt_data_directory }}"
+        - src: users.conf
+          dest: "{{ mosquitto_directory }}/config"
+        - src: acl.conf
+          dest: "{{ mosquitto_directory }}/config"
+        - src: mosquitto.conf
+          dest: "{{ mosquitto_directory }}/config"
+      register: zigbee2mqtt_config
+
+    - name: Mosquitto Docker Container
+      community.docker.docker_container:
+        name: "{{ mosquitto_container_name }}"
+        image: "{{ mosquitto_image_name }}:{{ mosquitto_image_version }}"
+        pull: true
+        volumes:
+          - "{{ mosquitto_directory }}/config:/mosquitto/config:rw"
+          - "{{ mosquitto_directory }}/data:/mosquitto/data:rw"
+          - "{{ mosquitto_directory }}/log:/mosquitto/log:rw"
+        network_mode: "{{ homeassistant_network_name }}"
+        ports:
+          - "{{ mosquitto_port_a }}:1883"
+          - "{{ mosquitto_port_b }}:9001"
+        restart_policy: unless-stopped
+        env:
+          TZ: "{{ ansible_nas_timezone }}"
+        memory: "{{mosquitto_memory }}"
+
+    - name: Zigbee2Mqtt Docker Container
+      community.docker.docker_container:
+        name: "{{ zigbee2mqtt_container_name }}"
+        image: "{{ zigbee2mqtt_image_name }}:{{ zigbee2mqtt_image_version }}"
+        pull: true
+        volumes:
+          - "/run/udev:/run/udev:ro"
+          - "{{ zigbee2mqtt_data_directory }}:/app/data:rw"
+        devices: "/dev/serial/by-id/{{ zigbee_dongle }}:/dev/ttyACM0"
+        privileged: true
+        network_mode: "{{ homeassistant_network_name }}"
+        ports:
+          - "{{ zigbee2mqtt_port }}:8080"
+        restart_policy: unless-stopped
+        restart: "{{ zigbee2mqtt_config is changed }}"
+        env:
+          TZ: "{{ ansible_nas_timezone }}"
+          ZIGBEE2MQTT_CONFIG_MQTT_SERVER : mqtt://{{ mosquitto_container_name }}
+        memory: "{{ zigbee2mqtt_memory }}"
+
   when: homeassistant_enabled is true
+
 
 - name: Stop homeassistant
   block:
