--- a/roles/homeassistant/templates/zigbee2mqtt/configuration.yaml
+++ b/roles/homeassistant/templates/zigbee2mqtt/configuration.yaml
@@ -1,6 +1,7 @@
-permit_join: true
+permit_join: false
 homeassistant: true
 frontend: true
+devices: devices.yaml
 
 mqtt:
   base_topic: zigbee2mqtt
