--- a/roles/plex/tasks/main.yml
+++ b/roles/plex/tasks/main.yml
@@ -10,9 +10,6 @@
         - "{{ plex_config_directory }}/autoscan"
         - "{{ plex_config_directory }}/metamanager"
         - "{{ plex_logs }}"
-        - "{{ plex_movies_directory }}/youtube"
-        - "{{ plex_movies_directory }}/movies"
-        - "{{ plex_movies_directory }}/tv"
 
     - name: Create Plex Docker Container
       community.docker.docker_container:
@@ -22,9 +19,7 @@
         volumes:
           - "{{ plex_config_directory }}:/config:rw"
           - "{{ plex_logs }}:/opt/plex/Library/Application Support/Plex Media Server/Logs:rw"
-          - "{{ plex_movies_directory }}/movies:/movies:{{ plex_movies_permissions }}"
-          - "{{ plex_movies_directory }}/tv:/tv:{{ plex_tv_permissions }}"
-          - "{{ plex_movies_directory }}/youtube:/youtube:{{ plex_tv_permissions }}"
+          - "{{ plex_movies_directory }}:/movies:{{ plex_movies_permissions }}"
           - "{{ plex_photos_directory }}:/photos:{{ plex_photos_permissions }}"
           - "{{ plex_podcasts_directory }}:/podcasts:{{ plex_podcasts_permissions }}"
           - "{{ plex_music_directory }}:/music:{{ plex_music_permissions }}"
