Minor fixes for immich, tandori, scrutiny

--- a/roles/tandoor_recipes/tasks/main.yml
+++ b/roles/tandoor_recipes/tasks/main.yml
@@ -62,7 +62,7 @@
           DEBUG: "0"
           SQL_DEBUG: "0"
           DEBUG_TOOLBAR: "0"
-          TIMEZONE: "{{ ansible_nas_timezone }}"
+          TZ: "{{ ansible_nas_timezone }}"
         labels:
           traefik.enable: "false"
         memory: "{{ tandoor_recipes_web_memory }}"
