--- a/roles/immich/tasks/main.yml
+++ b/roles/immich/tasks/main.yml
@@ -60,7 +60,6 @@
         name: "{{ immich_server_container_name }}"
         image: "{{ immich_server_image }}:{{ immich_server_tag }}"
         pull: true
-        command: ["start.sh", "immich"]
         volumes:
           - "{{ immich_data_directory }}/data:/data:rw"
           - "{{ immich_upload_directory }}:/usr/src/app/upload:rw"
@@ -82,9 +81,7 @@
           JWT_SECRET: "{{ immich_jwt_secret }}"
           ENABLE_MAPBOX: "{{ immich_enable_mapbox }}"
           MAPBOX_KEY: "{{ immich_mapbox_key }}"
-          UPLOAD_LOCATION: "{{ immich_upload_location }}"
           PUBLIC_LOGIN_PAGE_MESSAGE: "{{ immich_public_login_page_message }}"
-          IMMICH_WORKERS_INCLUDE: 'api'
         labels:
           traefik.enable: "{{ immich_available_externally | string }}"
           traefik.http.routers.immich.rule: "Host(`{{ immich_hostname }}.{{ ansible_nas_domain }}`)"
@@ -94,6 +91,7 @@
           traefik.http.services.immich.loadbalancer.server.port: "3001"
         restart_policy: unless-stopped
         memory: "{{ immich_server_memory }}"
+        memory_swap: "{{ immich_server_memory }}"
 
     - name: Immich Machine Learning Docker Container
       community.docker.docker_container:
@@ -118,7 +116,6 @@
           JWT_SECRET: "{{ immich_jwt_secret }}"
           ENABLE_MAPBOX: "{{ immich_enable_mapbox }}"
           MAPBOX_KEY: "{{ immich_mapbox_key }}"
-          UPLOAD_LOCATION: "{{ immich_upload_location }}"
           PUBLIC_LOGIN_PAGE_MESSAGE: "{{ immich_public_login_page_message }}"
         labels:
           traefik.enable: "false"
