--- a/roles/crowdsec/templates/acquis.yaml
+++ b/roles/crowdsec/templates/acquis.yaml
@@ -6,11 +6,6 @@ labels:
   type: syslog
 ---
 filenames:
-  - /logs/web/traefik/*.log
-labels:
-  type: traefik
----
-filenames:
   - /logs/web/nextcloud/*.log
 labels:
   type: apache2
@@ -19,3 +14,8 @@ filenames:
   - /logs/web/tandoor_recipes/*.log
 labels:
   type: apache2
+#---
+#filenames:
+#  - /logs/web/traefik/*.log
+#labels:
+#  type: traefik
