--- a/roles/portainer/defaults/main.yml
+++ b/roles/portainer/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 portainer_enabled: false
 portainer_available_externally: false
+portainer_api_key: ""
 
 # directories
 portainer_data_directory: "{{ docker_home }}/portainer/config"
