--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -35,6 +35,14 @@
           traefik.http.services.portainer.loadbalancer.server.port: "9443"
           traefik.http.routers.portainer.middlewares: "portainer-ipallowlist@docker"
           traefik.http.middlewares.portainer-ipallowlist.ipallowlist.sourcerange: "{{ portainer_ip_allowlist }}"
+          homepage.group: System
+          homepage.name: Portainer
+          homepage.icon: portainer.png
+          homepage.href: "https://{{ ansible_nas_hostname }}:{{ portainer_port }}"
+          homepage.widget.type: portainer
+          homepage.widget.url: "https://{{ ansible_nas_hostname }}:{{ portainer_port }}"
+          homepage.widget.env: "2"
+          homepage.widget.key: "{{ portainer_api_key }}"
   when: portainer_enabled is true
 
 - name: Stop Portainer
