--- a/roles/netdata/tasks/main.yml
+++ b/roles/netdata/tasks/main.yml
@@ -38,11 +38,12 @@
           flame.name: "Netdata"
           flame.url: "http://jezyk:{{ netdata_port }}/"
           flame.icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons@master/png/netdata.png"
-          homepage.group: "Other"
+          homepage.group: "System"
           homepage.name: "NetData"
-          homepage.icon: "si-plex"
-          homepage.href: "http://{{ plex_hostname }}.{{ ansible_nas_domain }}"
-          homepage.description: "Plex Media server"
+          homepage.icon: "netdata"
+          homepage.href: "http://{{ ansible_nas_hostname }}:{{ netdata_port }}"
+          homepage.widget.type: netdata
+          homepage.widget.url: "http://{{ ansible_nas_hostname }}:{{ netdata_port }}"
 
   when: netdata_enabled is true
 
