:sparkles: Add Glance

--- a/nas.yml
+++ b/nas.yml
@@ -313,6 +313,10 @@
       tags:
         - gitlab
 
+    - role: glance
+      tags:
+        - glance
+
     - role: glances
       tags:
         - glances
