--- a/roles/invidious/defaults/main.yml
+++ b/roles/invidious/defaults/main.yml
@@ -13,6 +13,7 @@ invidious_network_name: "invidious"
 # specs
 invidious_memory: 1g
 invidious_postgres_memory: 1g
+invidious_sig_helper_memory: 1g
 
 # docker
 invidious_container_name: invidious
@@ -21,6 +22,9 @@ invidious_image_name: "quay.io/invidious/invidious"
 invidious_image_version: latest
 invidious_postgres_image_name: "docker.io/library/postgres"
 invidious_postgres_image_version: "13"
+invidious_sig_helper_container_name: invidious-sig-helper
+invidious_sig_helper_image_name: "quay.io/invidious/inv-sig-helper"
+invidious_sig_helper_image_version: latest
 invidious_user_id: "1000"
 invidious_group_id: "1000"
 
@@ -29,6 +33,10 @@ invidious_db_name: "invidious"
 invidious_db_username: "invidious"
 invidious_db_password: "secure"
 invidious_hmac_key: "CHANGE ME!!!"
+invidious_sig_helper_log_level: "info"
+# invidious_visitor_data: ""
+# invidious_po_token: ""
+invidious_docker_youtube_generator_image: quay.io/invidious/youtube-trusted-session-generator
 invidious_config: |
   channel_threads: 1
   check_tables: true
@@ -39,6 +47,9 @@ invidious_config: |
     password: {{ invidious_db_password }}
     host: {{ invidious_postgres_container_name }}
     port: 5432
+  signature_server: {{ invidious_sig_helper_container_name }}:12999
+  visitor_data: dummy_visitor_data
+  po_token: dummy_po_token
   full_refresh: false
   https_only: true
   popular_enabled: true
