Watchtower homepage setup

--- a/roles/watchtower/defaults/main.yml
+++ b/roles/watchtower/defaults/main.yml
@@ -22,3 +22,4 @@ watchtower_memory: 1g
 watchtower_container_name: "watchtower"
 watchtower_image_name: "containrrr/watchtower"
 watchtower_image_version: "latest"
+watchtower_port: "3884"
