--- a/roles/apcupsd/molecule/default/molecule.yml
+++ b/roles/apcupsd/molecule/default/molecule.yml
@@ -4,3 +4,13 @@ provisioner:
     group_vars:
       all:
         apcupsd_enabled: true
+        apcupsd_data_directory: /tmp/apcupsd
+platforms:
+  - name: instance
+    image: geerlingguy/docker-ubuntu2204-ansible:latest
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp:/tmp:rw
+    privileged: true
+    pre_build_image: true
