--- a/roles/rclone/tasks/main.yml
+++ b/roles/rclone/tasks/main.yml
@@ -144,9 +144,9 @@
         masked: true
         state: stopped
       register: stop_service
-      until: stop_service.status.ActiveState == "inactive"
       retries: 5
       delay: 5
+      until: (stop_service is defined and stop_service.status is defined and stop_service.status.ActiveState == "inactive") or (stop_service is defined and stop_service.failed is defined)
 
       # TODO: Add proper service removal
   when: rclone_enabled is false and rclone_mount_enabled is false
