💩 Update for Ubuntu 24 (break_system_packages with pip)

--- a/roles/ansible-nas-docker/tasks/main.yml
+++ b/roles/ansible-nas-docker/tasks/main.yml
@@ -10,6 +10,7 @@
   ansible.builtin.pip:
     name: docker-py
     state: absent
+    break_system_packages: true
   register: result
   until: result is succeeded
 
@@ -17,6 +18,7 @@
   ansible.builtin.pip:
     name: docker
     state: present
+    break_system_packages: true
   register: result
   until: result is succeeded
 
