:bug: Update rclone and mergerfs stopping tasks

--- a/roles/rclone/tasks/main.yml
+++ b/roles/rclone/tasks/main.yml
@@ -137,6 +137,13 @@
 
 - name: Stop Rclone
   block:
+    - name: Gather service facts
+      ansible.builtin.service_facts:
+
+    - name: Check if Rclone service exists
+      set_fact:
+        rclone_service_exists: "{{ 'rclone' in ansible_facts.services }}"
+
     - name: Stop Rclone
       ansible.builtin.systemd:
         name: rclone
@@ -146,7 +153,8 @@
       register: stop_service
       retries: 5
       delay: 5
-      until: (stop_service is defined and stop_service.status is defined and stop_service.status.ActiveState == "inactive") or (stop_service is defined and stop_service.failed is defined)
+      until: (stop_service is defined and stop_service.status is defined and stop_service.status.ActiveState == 'inactive') or (stop_service is defined and stop_service.failed is defined)
+      when: rclone_service_exists
 
       # TODO: Add proper service removal
   when: rclone_enabled is false and rclone_mount_enabled is false
