--- a/roles/mergerfs/tasks/main.yml
+++ b/roles/mergerfs/tasks/main.yml
@@ -79,7 +79,7 @@
       ansible.builtin.service_facts:
 
     - name: Check if Mergerfs service exists
-      set_fact:
+      ansible.builtin.set_fact:
         mergerfs_service_exists: "{{ 'mergerfs' in ansible_facts.services }}"
 
     - name: Stop Mergerfs
